Expanded simplify operations for Sum and improved doubleValue and intValue operations for Minus.